# RockX

./: CMakeLists.txt
src/: config.cpp  config.h
syj_mssd/: CMakeLists.txt  config.txt  rknn_ssd.cpp  syj_mssd.cpp
syj_track/: CMakeLists.txt  config.txt  syj_track.cpp
